# pic64gx

./: Cargo.toml  README.md  build.rs  device.x  link.x  memory.x  pic64gx.svd  rust-toolchain.toml  settings.yaml  update.sh
.cargo/: config.toml
examples/: test1_tx_only.rs  test2_init_uart.rs
src/: bringup_uart.rs  lib.rs
